Update signin.html with latest changes

--- a/signin.html
+++ b/signin.html
@@ -16,7 +16,7 @@
 
       <div class="toggle">
         Don't have an account?
-        <a href="signup.html">Sign Up</a>
+        <a href="index.html">Sign Up</a>
       </div>
     </form>
   </div>
